# xforce_analytics

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.claude/: settings.local.json
backend/: README.md
backend/libs/lib-auth/: Cargo.toml
backend/libs/lib-auth/src/: error.rs  lib.rs  pwd.rs  token.rs
backend/libs/lib-core/: Cargo.toml
backend/libs/lib-core/src/: db.rs  error.rs  lib.rs
backend/libs/lib-core/src/config/: app_config.rs  auth_config.rs  db_config.rs  mod.rs
backend/libs/lib-core/src/ctx/: mod.rs  user_ctx.rs
backend/libs/lib-rpc/: Cargo.toml
backend/libs/lib-rpc/src/: lib.rs  router.rs
backend/libs/lib-utils/: Cargo.toml
backend/libs/lib-utils/src/: base64_utils.rs  lib.rs  time_utils.rs  uuid_utils.rs  validation.rs
backend/libs/lib-web/: Cargo.toml
backend/libs/lib-web/src/: lib.rs
backend/libs/lib-web/src/error/: app_error.rs  mod.rs  response.rs
backend/libs/lib-web/src/middleware/: auth.rs  cors.rs  logger.rs  mod.rs
backend/services/web-server/: Cargo.toml
backend/services/web-server/src/: app_state.rs  lib.rs  main.rs
backend/services/web-server/src/extractors/: mod.rs
backend/services/web-server/src/repositories/: mod.rs  project_repository.rs  user_repository.rs
backend/services/web-server/src/routes/: analytics.rs  auth.rs  enriched.rs  handbook.rs  health.rs  mod.rs  predictor.rs  projects.rs
backend/services/web-server/src/services/: analytics_service.rs  auth_service.rs  enriched_service.rs  handbook_service.rs  mod.rs  predictor_service.rs  project_service.rs
frontend/: Cargo.toml  README.md  Trunk.toml  index.html
frontend/src/: app.rs  lib.rs  router.rs
frontend/src/api/: analytics_api.rs  auth_api.rs  client.rs  enriched_api.rs  mod.rs  projects_api.rs
frontend/src/components/: charts.rs  footer.rs  layout.rs  mod.rs  navbar.rs  project_card.rs
frontend/src/components/analytics/: funding_by_round.rs  gap_analysis.rs  live_dashboard.rs  mod.rs
frontend/src/components/forms/: checkbox.rs  form_section.rs  input.rs  mod.rs  select.rs  slider.rs
frontend/src/hooks/: mod.rs
frontend/src/pages/: advanced_analytics.rs  application_guide.rs  application_guide_modular.rs  dashboard.rs  geographic_analytics.rs  landing.rs  login.rs  mod.rs  not_found.rs  predictor.rs  profile.rs  project_detail.rs  project_detail_enhanced.rs  projects.rs  projects_filtered.rs  signup.rs  social_analytics.rs  temporal_analytics.rs
frontend/src/pages/analytics/: analytics.rs  analytics_hub.rs  mod.rs
frontend/src/styles/: application_guide.css
frontend/src/styles/analytics/: analytics_hub.css
frontend/src/utils/: mod.rs
frontend/styles/: _common.css  _variables.css  dark-theme.css  guide_modular.css  main.css  project_detail_enhanced.css  projects_filtered.css
scripts/: README.md  deep_analytics.py  geographic_enrichment.py  github_fetcher.py  html_parser.py  polars_analytics.py  requirements.txt  run_all_enrichment.py  social_scraper.py  temporal_analysis.py  website_scraper.py
scripts/python/: analyze_projects.py  application_scorer.py  competitive_analyzer.py  extract_all_project_details.py  extract_insights.py  extract_samples.py  extract_timeline_data.py  funding_predictor.py  gap_analysis.py  generate_all_insights.py  requirements.txt  success_patterns.py  timeline_optimizer.py
shared/: Cargo.toml  README.md
shared/src/: lib.rs
shared/src/api_types/: analytics.rs  auth.rs  mod.rs  predictor.rs  projects.rs
shared/src/errors/: api_error.rs  mod.rs
shared/src/models/: analytics.rs  category.rs  enriched.rs  handbook.rs  mod.rs  project.rs  user.rs
sql/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_favorites.sql
sql/seeds/: dev_users.sql
