[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }

shared = { path = "../../../shared" }
lib-utils = { path = "../lib-utils" }
