[package]
name = "lib-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }

lib-core = { path = "../lib-core" }
lib-auth = { path = "../lib-auth" }
shared = { path = "../../../shared" }
